* Unreleased - Christophe Dumez <chris@qbittorrent.org> - v2.9.5
    - BUGFIX: Fix crash when disabling then reenabling RSS

* Sat Feb 18 2012 - Christophe Dumez <chris@qbittorrent.org> - v2.9.4
    - BUGFIX: qBittorrent does not handle redirection to relative URLs correctly (Closes #919905)
    - BUGFIX: Cmd+M minimizes main window on Mac OS X (Closes #928216)
    - BUGFIX: Cmd+Del removes torrents on Mac OS X (Closes #928852)
    - BUGFIX: Fix potential bug when moving single file torrents to tmp folder (closes #932861)
    - BUGFIX: Fix torrent import dialog layout (Closes #930932)
    - BUGFIX: Prevent log window buffer from filling up (Closes #929673)
    - I18N: Add Belarusian translation

* Thu Dec 29 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.3
    - BUGFIX: Fix btdigg plugin (Python3 support + torrent name in magnet links)
    - BUGFIX: Fix banning of IPv6 peers (Closes #885021)
    - BUGFIX: Fix torrent addition dialog layout problem (Closes #84650522)
    - BUGFIX: Do not report any progress for disabled files (Closes #56731485)
    - BUGFIX: Make torrent sorting case insensitive (Closes #857154)
    - BUGFIX: Improve Web UI usability of small devices
    - BUGFIX: Program updater: More reliable version detection / comparison
    - I18N: Add Georgian translation

* Sat Oct 29 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.2
    - BUGFIX: Fix mimimum dimensions for torrent addition dialog
    - BUGFIX: Remove dependency on boost-datetime
    - BUGFIX: Remove dependency on boost-filesystem (libtorrent v0.16.x)

* Sun Oct 23 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.1
    - BUGFIX: Add support for speed limits scheduling (Web UI)
    - BUGFIX: Fix ratio calculation for purely seeded torrents
    - I18N: Update Russian translation
    - COSMETIC: Torrent addition dialog layout fixes

* Sat Oct 08 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.0